Fix bug where horizontal scrolling is enabled in the collapsed view

--- a/components/_layout.scss
+++ b/components/_layout.scss
@@ -225,6 +225,7 @@ $include-html-paint-layout: true !default;
     list-style-type: none;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 
     a {
       @include single-transition(background-color, 150ms, linear);
